adding css elements to project

--- a/tracker/templates/events/countdown.html
+++ b/tracker/templates/events/countdown.html
@@ -3,6 +3,7 @@
 
 {% block scripts %}
     <script src={% static 'main.js' %} defer></script>
+    <!--<script src = {% static 'test.js' %} defer></script>-->
 {% endblock scripts %}
 
 {% block content %}
